<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme_background"
    android:clickable="true"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/advanced_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/theme_background"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/advanced_title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/layout_round_corner"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="8dp" >

                <TextView
                    android:id="@+id/advanced_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Advanced"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/allow_other_device"
                android:textColor="@android:color/black" />

            <RadioGroup
                android:id="@+id/loginType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/current_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/use_current"
                    android:textColor="@android:color/black" />

                <RadioButton
                    android:id="@+id/different_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/different_login"
                    android:textColor="@android:color/black" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/new_user_layout_round"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/round_corner_white"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingTop="20dp" >

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:maxLength="20" >

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:password="true" />

                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:password="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/permission_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/layout_round_corner"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="8dp" >

                <TextView
                    android:id="@+id/permission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/permissions"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RadioButton
                android:id="@+id/read_survey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_survey"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/perform_survey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/perform_survey"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/answer_button_shape"
                android:text="create account" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>