<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/header_layout" />

    <RelativeLayout
        android:id="@+id/home_pg_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ProgressBar
            android:id="@+id/home_pg"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Loading..."
             android:layout_centerHorizontal="true"
            android:layout_below="@id/home_pg"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="3" >

                <Button
                    android:id="@+id/report_bt"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_green_dark"
                    android:gravity="left|bottom"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/report_text"
                    android:textSize="15sp" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/settings_bt"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="2"
                    android:background="@android:color/holo_purple"
                    android:gravity="left|bottom"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/settings_text"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="3" >

                <Button
                    android:id="@+id/user_bt"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_red_light"
                    android:gravity="left|bottom"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/user_text"
                    android:textSize="15sp" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/help_bt"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="2"
                    android:background="@android:color/holo_orange_light"
                    android:gravity="left|bottom"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/help_text"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="3" >

                <Button
                    android:id="@+id/profile_bt"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_red_dark"
                    android:gravity="left|bottom"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/profile_text"
                    android:textSize="15sp" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/about_bt"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="2"
                    android:background="@android:color/holo_green_light"
                    android:gravity="left|bottom"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/about_text"
                    android:textSize="15sp" />
            </LinearLayout>
            <Button
                    android:id="@+id/start_srvey_bt"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="2"
                    android:background="@android:color/holo_green_light"
                    android:gravity="left|bottom"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:text="Start Survey"
                    android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>