<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/home_pg_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ProgressBar
            android:id="@+id/home_pg"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_pg"
            android:layout_centerHorizontal="true"
            android:text="Loading..." />
    </RelativeLayout>

    <EditText
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:hint="Profile Name"
        android:padding="5dp"
        android:textSize="20dp" />

    <CheckBox
        android:id="@+id/valid_upto_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:text="Valid upto"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/date_picker_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/valid_upto_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Valid Upto Date"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/set_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="set" />

        <TextView
            android:id="@+id/selected_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="28/10/2015"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/permission_for_child"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <CheckBox
        android:id="@+id/child_visible_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visible_for_child_login"
        android:textColor="@color/white" />

    <CheckBox
        android:id="@+id/child_selection_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/child_selection"
        android:textColor="@color/white"
        android:visibility="gone" />

    <Button
        android:id="@+id/create_profile_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/round_corner"
        android:padding="6dp"
        android:text="@string/create_profile" />

</LinearLayout>