<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue" >

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/card_background"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/login_layout_round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/round_corner_white"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingTop="20dp" >

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/user_name"
                android:paddingBottom="10dp"
                android:singleLine="true" >
            </EditText>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:paddingTop="10dp"
                android:password="true"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/login_layout_round"
            android:layout_gravity="center"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/svdPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:checked="true"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="save password" />
        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/card_backgroung_dark1"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_layout"
        android:layout_margin="10dp"
        android:background="@drawable/card_background"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/signup_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/register_account"
            android:textSize="15sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/progress_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
              android:background="@drawable/card_background"
             >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Initiating...  "
                android:gravity="center"
                android:textColor="@android:color/black" />

            <ProgressBar
                android:id="@+id/p_bar"
                android:layout_width="20dp"
                android:layout_height="20dp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>