<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/home_pg_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/home_pg"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_pg"
            android:layout_centerHorizontal="true"
            android:text="Loading..." />
    </RelativeLayout>

    <EditText
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="Profile Name"
        android:padding="5dp"
        android:textSize="20dp" />

    <CheckBox
        android:id="@+id/valid_upto_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="Valid upto"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/date_picker_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/valid_upto_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="6dp"
            android:text="Valid Upto Date"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/set_date"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/calender_icon2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="" />

        <TextView
            android:id="@+id/selected_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="28/10/2015"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/permission_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/layout_round_corner"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="8dp" >

        <TextView
            android:id="@+id/permission_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/permission_for_child"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/child_visible_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/visible_for_child_login"
        android:textColor="@color/black" />

    <CheckBox
        android:id="@+id/child_selection_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/child_selection"
        android:textColor="@color/black"
        android:visibility="gone" />

    <Button
        android:id="@+id/create_profile_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/answer_button_shape"
        android:padding="6dp"
        android:text="@string/create_profile" />
    
    <Button 
        android:id="@+id/profile_edit_button"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/blue"/>

</LinearLayout>